# game-of-life

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: buildAndGenerate.yml
include/: BaseMathFunctions.cpp  BaseMathFunctions.h  Renderer.hpp  eventsHandler.cpp  eventsHandler.h  eventsHandler.hpp  gameClasses.cpp  gameClasses.h  gameClasses.hpp  gameLogic.cpp  gameLogic.h  gameLogic.hpp
src/: BaseMathFunctions.cpp  Main.cpp  Renderer.cpp  eventsHandler.cpp  gameClasses.cpp  gameLogic.cpp
